WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309957
[JSC] Fix SIGSEGV in `Temporal.PlainDate.from` with out-of-range month and `overflow: "reject"`
https://bugs.webkit.org/show_bug.cgi?id=309957
Summary
[JSC] Fix SIGSEGV in `Temporal.PlainDate.from` with out-of-range month and `o...
Sosuke Suzuki
Reported
2026-03-14 08:37:58 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-03-14 08:39:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60632
EWS
Comment 2
2026-03-18 18:26:31 PDT
Committed
309519@main
(ce0c3918570d): <
https://commits.webkit.org/309519@main
> Reviewed commits have been landed. Closing PR #60632 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-03-18 18:27:14 PDT
<
rdar://problem/172879023
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug